# pgc

./: .dockerignore  .gitignore  Dockerfile  asd.sql  build.ts  catalog.json  deno.json  pgc.yaml  queries.sql  readme.md  reference.md  schema.sql  sqlc.yaml  types.ts
codegen/: Cargo.toml  Makefile  foo.json
codegen/_templates/: model_init.py.jinja2
codegen/src/: builder.rs  error.rs  file_gen_config.rs  file_generator.rs  jinja_environment_builder.rs  lib.rs  main.rs  method.rs  mock.rs  model_modules.rs  query_namespace.rs  request.rs  response.rs  template_context.rs  type.rs  type_builder.rs  utils.rs
codegen/src/ir/: method_service.rs  mod.rs  model_service.rs  query_namespace_service.rs  type.rs  type_service.rs
codegen/src/ir/model_modules/: mod.rs  model.rs  model_module.rs
codegen/src/ir/query_namespace/: mod.rs
codegen/src/method/: method_builder.rs  mod.rs
codegen/src/presentation/: environment.rs  file_generation_config.rs  file_generator.rs  mod.rs  templating_service.rs  type_map.rs  type_mapping_service.rs
codegen/src/presentation/python/: driver.rs  mod.rs  (+3 more)
codegen/src/query_namespace/: mod.rs  query_namespace_builder.rs
codegen/templates/python/: models.jinja2  queries.jinja2  types.json
codegen/templates/python:asyncpg/: model.py.jinja2  model_init.py.jinja2  query.py.jinja2  types.json
codegen/templates/python:psycopg/: config.json  model.py.jinja2  types.json
codegen/templates/typescript:postgres/: config.json  model.jinja2  model_init.jinja2  parser.ts  query.jinja2  types.json
codegen/tests/: models.rs  request.json
(+50 files in other folders)
