[package]
name = "pgc-codegen"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = true


[dependencies]
serde = {version="1.0", features = ["derive", "rc"]}
serde_json = "1.0"
minijinja = "2.10.2"
regex = "1.11.1"
thiserror = "2.0.12"
heck = "0.5.0"
indexmap = { version = "2.10.0", features = ["serde"] }
